Initialisation projet installation react react-router et RTK

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="src/img/argentBankLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Argent Bank - Home Page</title>
-    <link rel="stylesheet" href="./css/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="src/css/main.css" />
+    <title>Argent Bank</title>
   </head>
   <body>
+    <div id="root">
+    </div>
+
     <nav class="main-nav">
       <a class="main-nav-logo" href="./index.html">
         <img
@@ -75,5 +75,6 @@
     <footer class="footer">
       <p class="footer-text">Copyright 2020 Argent Bank</p>
     </footer>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
